@@ -14,28 +14,28 @@ DIST qt-everywhere-opensource-src-4.8.5.tar.gz 241491467 SHA256 eb728f8268831dc4
 DIST qt-everywhere-opensource-src-4.8.6.tar.gz 241623667 SHA256 8b14dd91b52862e09b8e6a963507b74bc2580787d171feda197badfa7034032c SHA512 c2d07c3cf9d687cb9b93e337c89df3f0055bd02bc8aa5ecd55d3ffb238b31a4308aeabc3c51a4f94ac76a1b00796f047513d02e427ed93ae8dd99f836fff7692 WHIRLPOOL 473566814a77237dbdd37a47980c1085f6cf39599c4d6b0120959fe80dadf65c4eaafd5f528dd86cea8815562faa204bedfe3b766c2ca4f2d2c99efc21dbca84
 DIST qtbase-opensource-src-5.4.1.tar.xz 46132220 SHA256 8574a593830959c0f7e5430fe77a43832ea7f5299e14a397a74576b3df7fb1b7 SHA512 75d2c16bc47e6403e15c4094f50757157960cff4434de29f199b015795ba772b62125f01c09aceb2a06f8dfcfc4df8e35330259c76959239f276e2f5bd5221b5 WHIRLPOOL 48d9a583ba9d0bbfffdbfeaa2412e77a0bf4011e7bba525129ba4572faa6a55713a89cb00f4ed7f24e6782e3f7b8b48cb192e2c082b7dcb3c35a85109f2eb340
 DIST qtgui-systemtrayicon-plugin-system.patch 51377 SHA256 e8582ebb2a5db99bf85789585516459ace42fc2b57fc7d5ff6156a2819bda282 SHA512 0d74b61e23af2e8ef0619ee616c4b775761514f53ba79bcb25b32b7e55beab3575c0d279ba1b016498804023bb78f8cff61964ce56f80642f648406f7c303679 WHIRLPOOL 03cc247a2a0e3b77fc541fa0b47abb125c8f7b304037f2067488861f12fdab25d3b3b3a7cf90626c229aa85a2d43ae4319c0f838b6eeb5ecdfe838a365ed8a58
-EBUILD qtgui-4.8.5-r3.ebuild 6299 SHA256 d49aca808e9bfb951a2fcec3893c4d6f396c0719b284fe658f3cbbf6ad86a114 SHA512 5293d98e566e39f6f0f9130fbca7453aeff394643735a6206e60d7469300f5faaa29f14f4786cbc3539e16cb8569d2e0fe1c1d84706c7449e253a15d509eeb39 WHIRLPOOL 261fc5e58658a0a06f77980f5027d77f0d341ca17d4b59120a6599641ccccc746f5964e277cf4d2bb0233d18555dbf73fd1da82749082fc20a7f99ce7dda0239
-EBUILD qtgui-4.8.5-r4.ebuild 6368 SHA256 1824af23cde98850150fd6aac5c7c5d42285fc2ac42adca42e37c93eae70d96d SHA512 6a000897439ca3dea191cb8fec6c1d094ec7b9b5cd18ca04f687df17224b202a637f203308fc7c99fa2ede48bd4390e0a0b7247e764358135289fafc94ac963c WHIRLPOOL 15488f98eb668f7959c5cc002eb7182a740eea8e8e60391deb7b6e59c7f337a554678199bad23a7cd711ffc81a5c9de470c480bcf1d0595fbc269a7ea0aeaeac
-EBUILD qtgui-4.8.6-r2.ebuild 6169 SHA256 b18f06e3786e8776071606e0f6ce040db91e44c9dff861ed34219ac1dc78d08f SHA512 f7ffd0c7b325d81bb65f0e6cb24628fbe2234ae537ae0bff16299c9d2cb698620622d5f26d452d60902ef9d6fdc9c48dcb3eb897af45234d530c50a04944f761 WHIRLPOOL 70db7b0d6d1d7cf37db12d6359fbb482431eb85f79253d1e215202f9fe4bdb313896801bd724afb2d2805b1941ebfeeb22d2d4e89d7562c21a43030fe8a38b08
+EBUILD qtgui-4.8.5-r3.ebuild 6304 SHA256 9e38cadd5922673b139ab7a3730e5bbdcf56026cebecba937773820556ce25d2 SHA512 314378554a3b45528e2f6d9a0d49e20401e4f3eb8e68731daf376e7dd31697ca509d8553dc019095a1c3baebd098d8bc65d04622bdfd93789ffb4b8f97f1db43 WHIRLPOOL 82464370aee87e9cb306d378c58f2249f1dc3244b3badeee9ffac1d660c4249396f9cb0ba96877b4fbb41330d586b3bfd0497b8062c383f73cab3f91c27ce02a
+EBUILD qtgui-4.8.5-r4.ebuild 6377 SHA256 845e1b3e688b64a01e1c01f63a725e4ad4182f599c2845d6e0695d7f715a821c SHA512 0877b877ba3f42d3fa9a3a8891e6f26b89d21785f000f0a994dbfd8cd661952d3f233c46e92d6b87b89441291b673d892d57b810faf18d1f1c57553c0f2105cc WHIRLPOOL 81118c3e11ae21a1116a37ea8de8ea62812d02d1aba36b68b289b8d6ad48dc6a9c73ee173e5e5eacfe24b1c236321200069af1550c01f99a1b1457da98d195cc
+EBUILD qtgui-4.8.6-r2.ebuild 6171 SHA256 fa06cdd344874f1dab37ae0df5c0107eddc95dddd514ba1c7ebc083b0273af3d SHA512 1c8dc0d5dd945c0c5815d4f695dc2a326274d4a1d16b2b90f88900edb73e77f3ce07bea82e38f14b4eb49f42a86b51200f4edd7fab749bd34b5de9d80774a8aa WHIRLPOOL c38423d4b3c790747bf56e21cda7d0c8730972c67daf51358159b325c220201428d1ec4059a14e21a4ba15a47f4ac329e5d14e2b0c0a5492cf0314799dd64a28
 EBUILD qtgui-5.4.1-r1.ebuild 3438 SHA256 808969499a1a19c849b30e495ff302b0c99cea08b5109878bc3ee5d56e371fb2 SHA512 19d61fdf25e5cc666d2d153e5dd365e20c8851cb8f42498520af2d9e72377b0ba02783ea5340bf0106e90469a745174ad4def1f4779d5276c2facb32ebff8af4 WHIRLPOOL 8954a8bd034d8d97bac92a63ba5136a2e56decea737a3d28364902aa4282c17baf6b30b5d8a90695862fb4c85dcd0b35bef68a130b63470958c3ce6b19100ae4
-MISC ChangeLog 41938 SHA256 b0399e3d4398531aa01c3b3218158c119fd75faec9bcf34c3f589e75802bc1fd SHA512 986af622f4b2b5c9feb10da48478b76258ece4a6f9c48d3bfb8e2d5c258a2035c0da49b46f2b0786c19214396d3a7ac925b2a3bb63320ebb57ebe0d596f0c1ad WHIRLPOOL 0d14c5789591db2fe22c223f6beec15021d725886c1c505e6d34461120d65f0232ce968de6fee5a7872037ca44a5c41a7542630e32bc33f82aa716f8d0765ea5
+MISC ChangeLog 42175 SHA256 fe6982a06599995991ec851f0b30e937c0621630851b2cd0cc6f933ce981e7fc SHA512 91b160004a2e4b0d0657595a44c19ca0c534bfd0ff469b2610d0d449690fb1c1e7d7c79a8aacb5a30e14f004410e59971156aef1e7fbf7f67b82fcba303d9e1c WHIRLPOOL ae07bd683157429e68d1de92938408e83f69d9e8def1209b944825ecfa96dc022f04818dda30b84cbad14041f52eaabe384c23d8b3ab88edf131ff7130bef8f4
 MISC metadata.xml 1431 SHA256 40799d067d2838a90818644ba38a4af47880194285c0627658b6d6798219ca17 SHA512 51e5b41ecc5584a3bda4f595bc5dd43ab89070ce356d2c03406479ed36490d46fa235eefd07707e30e9cdd952cd77bcf626423c5453725d442e769eb14c0e130 WHIRLPOOL 56c82cccefe2dd43b577456fcc90ed99ceb020b78d24f93f0c7a7618274f2025837c4142d75569f5894a2cacb45ca42c34e5e74d73e03aa6a9f9e2fb84b9c149
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVE1vJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9owwP/jq/rDzmkRR5tkSek5gE+NN3
-bJ0KkMNjUuYh31GotBwBaxYb2L403BPOAG4t+CZglJH9Y32H4XQimnQxkQlb3A1s
-cTGyAvN74d4XMs85pzBr60Gw0RjXRm8mgAk6XoKrF6l9EBQn+l7uhALghTo5q+Xu
-rylGBEGrwkF4WR9n2WDSkM/5Kf7sHFNB1Qzhina90MtqaNPPIE/8r+aWzLqStqAR
-gl3ZqUpFBlPKfegpGxSX44mPDVIErT28QczZ5aui3s26OvIBAkvcCWstpAuz5kDW
-7y0uVUwKb4ug8QN1Yv0USDsgoenpj5GocdBVc158kSVHE+DJKxyvT+MkQQbP9X1s
-g6+DEamOaZatkMLIFiaXI44XWXlnmkmyjpxxmtfmGKoKWAgere3pgmQQSG5RBWU0
-iPDlFiIoQU6swurG9SzlAkR5q00+Bbor4Ce2f3rIch2qiuhfzk0x5eyHoYcQwNHm
-EQ/h2LBqFjps3Z7/Vj7BPRk64L8c8Wy4ox2V1ss0zJXBQCgPZW/TKP79ipgf3rMm
-e9RMUioE958ypR1Dwnt3NKsxynO0ecxQ3kXiZv9M/d9/C7QpNe74xx/6ydHC0LH2
-37cL8BcUdyzMDW7PUJ+nk4YICJ5AD/Xz368OiFPFfKlZgExoCYW95EJ8xDrcNILj
-xNWO8G6A1dSuH+3L6gG1
-=CvE8
+iQJ8BAEBCABmBQJVE2ctXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
+OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNM8EQAL2tSUBVQxgWP92zlDRIZyLV
+Bd3Q5BZfoLjrlt+t1APfWrjGIYadoOiERYJiyMfn26xkKJk40ChjsbnYwzt0QoM/
+G7YB0ZGxaVJuQMrIegXhw0gtXLPcELmaeA9dAAC3u+oqjGnop4VP/relcVDHJkLO
+UEDhm1j+NDtgYRBSH5k3DENS8vYK0GEtC9rID1r+Ifig+ZZQ+67CjRw7Jp8xjuxj
+7W9fK2heEbb3Pw9utyOFiJx6U+9Jic57QrvdgbTVHpADS1/oVxd6vi1ZnrW3kiR6
+18TLgt4Nvx0FVEfHKS+G96pLM/+mweFtKEel8p4XLoQOGozw6jJosw5kVdcpbmd5
+A3yNwzrxr/4TjBrc1p+cMlTEa6XQOswBUR0bvAaevezfX/kLSl+ddLVP2DNL38uL
+aakDBemXnWnoLMKf2iak/GCsW1vWmmqhajBqOOVsB18w8Pa7cuLGcbcYhTHPH4K+
+gCs0191V/McboK4sj/V5mu5+zYY41R3A1awDR1HicNEWJeIIlN3qh4OJ1o8CUmAL
+s58NS05IQ55++oBlTDIShnaVUmELMYlUxGXIh039NffrpMFjbLdExUD8JGA6e2Ib
+sW4XK4JGXBkbphQMtbEW4ozlAvgizoKniRIvpdxqHMWQh0FHJotRC8fRvLOLe+BF
+gTWvYyrOHwK4xAinE5zM
+=nktk
 -----END PGP SIGNATURE-----
